--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,13 +33,35 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      # We want a report even when tests fail, so we don't stop the workflow here.
       - name: Run tests (generate HTML report)
         run: npm run test:ci
+        continue-on-error: true
 
+      # Create a single .tar.gz containing the Playwright HTML report folder contents.
+      - name: Package report for Pages
+        run: |
+          test -d playwright-report || (echo "playwright-report not found" && exit 1)
+          tar -czf github-pages.tar.gz -C playwright-report .
+
+      # Upload ONE artifact named "github-pages" (what deploy-pages expects by default).
       - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          path: playwright-report
+          name: github-pages
+          path: github-pages.tar.gz
+          retention-days: 1
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    environment:
+      name: github-pages
+
+    steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages
