--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,57 +1,3 @@
-name: Publish Playwright Report to Pages
-
-on:
-  push:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node (LTS for CI stability)
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-
-      # We want a report even when tests fail, so we don't stop the workflow here.
-      - name: Run tests (generate HTML report)
-        run: npm run test:ci
-        continue-on-error: true
-
-      # Create a single .tar.gz containing the Playwright HTML report folder contents.
-      - name: Package report for Pages
-        run: |
-          test -d playwright-report || (echo "playwright-report not found" && exit 1)
-          tar -czf github-pages.tar.gz -C playwright-report .
-
-      # Upload ONE artifact named "github-pages" (what deploy-pages expects by default).
-      - name: Upload Pages artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: github-pages.tar.gz
-          retention-days: 1
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -60,8 +6,24 @@ jobs:
       name: github-pages
 
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - name: Deploy to GitHub Pages (attempt 1)
+        id: deploy1
+        uses: actions/deploy-pages@v4
+        continue-on-error: true
+        with:
+          artifact_name: github-pages
+
+      - name: Deploy to GitHub Pages (attempt 2)
+        if: steps.deploy1.outcome == 'failure'
+        id: deploy2
+        uses: actions/deploy-pages@v4
+        continue-on-error: true
+        with:
+          artifact_name: github-pages
+
+      - name: Deploy to GitHub Pages (attempt 3)
+        if: steps.deploy2.outcome == 'failure'
+        id: deploy3
         uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
