--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,3 +27,10 @@
         uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
+      
+      - name: Deploy to GitHub Pages (attempt 4)
+        if: steps.deploy2.outcome == 'failure'
+        id: deploy3
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages
