--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,3 +1,56 @@
+name: Publish Playwright Report to Pages
+
+on:
+  push:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node (LTS for CI stability)
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      # Generate the Playwright HTML report even if tests fail.
+      - name: Run tests (generate HTML report)
+        run: npm run test:ci
+        continue-on-error: true
+
+      # Package the report as a single tar.gz artifact for Pages deployment.
+      - name: Package report for Pages
+        run: |
+          test -d playwright-report || (echo "playwright-report not found" && exit 1)
+          tar -czf github-pages.tar.gz -C playwright-report .
+
+      - name: Upload Pages artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: github-pages.tar.gz
+          retention-days: 1
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -14,23 +67,16 @@
           artifact_name: github-pages
 
       - name: Deploy to GitHub Pages (attempt 2)
-        if: steps.deploy1.outcome == 'failure'
         id: deploy2
+        if: steps.deploy1.outcome == 'failure'
         uses: actions/deploy-pages@v4
         continue-on-error: true
         with:
           artifact_name: github-pages
 
       - name: Deploy to GitHub Pages (attempt 3)
-        if: steps.deploy2.outcome == 'failure'
         id: deploy3
-        uses: actions/deploy-pages@v4
-        with:
-          artifact_name: github-pages
-      
-      - name: Deploy to GitHub Pages (attempt 4)
         if: steps.deploy2.outcome == 'failure'
-        id: deploy3
         uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
