--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,20 +1,11 @@
-name: Publish Playwright Report to Pages
+name: Publish Playwright Report (gh-pages)
 
 on:
   push:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,50 +24,22 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      # Generate the Playwright HTML report even if tests fail.
       - name: Run tests (generate HTML report)
         run: npm run test:ci
         continue-on-error: true
 
-      # Package the report as a single tar.gz artifact for Pages deployment.
-      - name: Package report for Pages
-        run: |
-          test -d playwright-report || (echo "playwright-report not found" && exit 1)
-          tar -czf github-pages.tar.gz -C playwright-report .
-
-      - name: Upload Pages artifact
+      - name: Upload HTML report artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: github-pages
-          path: github-pages.tar.gz
-          retention-days: 1
+          name: playwright-html-report
+          path: playwright-report
+          retention-days: 7
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    environment:
-      name: github-pages
-
-    steps:
-      - name: Deploy to GitHub Pages (attempt 1)
-        id: deploy1
-        uses: actions/deploy-pages@v4
-        continue-on-error: true
+      - name: Publish report to gh-pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          artifact_name: github-pages
-
-      - name: Deploy to GitHub Pages (attempt 2)
-        id: deploy2
-        if: steps.deploy1.outcome == 'failure'
-        uses: actions/deploy-pages@v4
-        continue-on-error: true
-        with:
-          artifact_name: github-pages
-
-      - name: Deploy to GitHub Pages (attempt 3)
-        id: deploy3
-        if: steps.deploy2.outcome == 'failure'
-        uses: actions/deploy-pages@v4
-        with:
-          artifact_name: github-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: playwright-report
+          force_orphan: true
