--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,6 +3,9 @@ name: Publish Playwright Report (gh-pages)
 on:
   push:
     branches: [ "main" ]
+    
+permissions:
+  contents: write
 
 jobs:
   publish:
